rewrite the tally code to be both safe (transaction-based) and scalable.  Uses a series of atomic tasks